more changes before turning in

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <div class="container text-center mt-2">
       <button class="btn btn-primary" id="submit">Submit</button>
   </div>
-
-    <div id="content"></div>
+<!-- Empty div to display weather -->
+    <div id="content"></div>  
 
 
 
